tests/parser/invalid/missing_paren.src
fn main() {
    if x > 0 {  // Ошибка: пропущены ()
        return 1;
    }
}